Fix use of java API version > 8
Signed-off-by: vcucchie <vincent.cucchietti@gmail.com>